# jupyter-scatter-tutorial

./: .gitignore  CITATION.cff  README.md  _config.yml  _toc.yml  pyproject.toml  requirements.txt
.github/workflows/: book.yml
notebooks/: 01-Getting-Started.ipynb  1-Getting-Started.ipynb  2-Composing-Linking-Scatter-Plots.ipynb  3-Comparative-Single-Cell-Embeddings.ipynb  3-Fashion-MNIST.ipynb  3-Genomics.ipynb  3-LLM-Sentence-Embedding.ipynb  4-Tooltip-Fashion-MNIST.ipynb  4-Tooltip-Google-Nsynth.ipynb  4-Tooltip-LLM-Sentence-Embedding.ipynb  4-Tooltip-Single-Cell-Embeddings.ipynb  5-Cluster-Outlines-Contours.ipynb  5-Search.ipynb  6-Labels.ipynb  Index.ipynb  viewconf.json
